--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "tparser": "^0.5.0"
+    "tparser": "^0.5.0",
+    "ts-loader": "^2.0.1"
   }
 }
