--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
         "noImplicitThis": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true
-    }
+    },
+    "exclude": [
+        "mips/**"
+    ]
 }
